# kernel

./: .bochsrc  .clang-format  .clangd  .gdbinit  .gitignore  .luarc.json  AGENTS.md  CMakeLists.txt  README.md  README.txt  build.py  create_iso.sh  flake.local.example.nix  flake.nix  run_qemu.sh  toolchain.cmake
.agents/skills/check-build-type/: SKILL.md
.agents/skills/host-test/: SKILL.md
.agents/skills/kernel-build/: SKILL.md
.agents/skills/kernel-test/: SKILL.md
cmake/: build_lua.cmake  lua_dont_link_lm.patch
docs/: CMakeLists.txt  Doxyfile.in
docs/theme/: custom.css
gdb/: .gdbinit  heap.scm  kernel-gdb.scm  linked-list.py  linked-list.scm  task.scm  util.scm
include/ytkernel/: arch.h  arch_boot.h  arch_timer.h  arch_vmm.h  assert.h  chardev.h  conmgr.h  cpu.h  devmgr.h  dynarr.h  elf.h  fildes.h  framebuf.h  heap.h  init.h  inputmgr.h  kbd.h  kerr.h  kinttypes.h  kmutex.h  kprintf.h  ksemaphore.h  kspinlock.h  ksyscall.h  list.h  log.h  mbi.h  panic.h  pci.h  pit.h  pmm.h  psf.h  queue.h  serial.h  slab.h  smp.h  stack.h  taskmgr.h  textdisp.h  tty.h  (+5 more)
include/ytkernel/arch/x86/: arch_defs.h  arch_types.h  gdt.h  idt.h  isrs.h
include/ytkernel/arch/x86/apic/: apic_common.h  ioapic_regs.h  lapic_regs.h
include/ytkernel/vfs/: file.h  file_err.h  fs_desc.h  vfs_err.h  vnode.h  vpath.h
isodir/boot/grub/: grub.cfg
isodir/boot/limine/: limine-bios.sys  limine.conf  limine.conf.in
klibc/: CMakeLists.txt  COPYING  ctype.c  locale.c  math.c  setjmp.c  setjmp.s  stdio.c  stdlib.c  string.c  time.c
klibc/include/: ctype.h  locale.h  math.h  setjmp.h  signal.h  stdio.h  stdlib.h  string.h  time.h
libc-shim/include/: ctype.h  signal.h  stdio.h  string.h  time.h
libc-shim/include/sys/: types.h
lua/: kshell.lua
src/: CMakeLists.txt  ahci.c  ahci.h  alloc.c  alloc.h  arch.h  assert.h  cmdline.c  cmdline.h  config.h.in  conmgr.c  console.c  console.h  cpu.c  cpu.h  devdrv.c  devdrv.h  devmgr.c  devmgr.h  dynarr.c  elf.c  elf.h  entry.s  fildes.c  framebuf.c  framebuf.h  gdt.c  gdt.h  gdt.s  gpt.c  gpt.h  heap.c  heap.h  heap2.c  idt.c  idt.h  idt.s  init.c  inputmgr.c  isrs.h  (+98 more)
src/acpi/: acpi.c  acpi.h  acpi_defs.h  apic.c  apic.h  apic_regs.h  ioapic.c  ioapic.h  ioapic_regs.h  lapic.c  lapic.h  lapic_regs.h
src/arch/x86/: CMakeLists.txt  arch.c  arch_boot.c  arch_smp.c  arch_smp.h  arch_taskmgr.c  arch_timer.c  arch_vmm.c  boot.s  entry.s  gdt.c  idt.c  idt.h  isrs.h  isrs.s  kbd_arch.c  ksyscall_arch.c  linker.ld  mbi.c  mbi.h  panic.s  pci_arch.c  pic.c  pit.c  port.h  serial_arch.c  stacktrace.s  vga.c  vmm.c  vmm.s  vmm2_arch.c
src/arch/x86/apic/: ioapic.c  ioapic.h  lapic.c  lapic.h
src/arch/x86/test/: vmctl_arch.c
src/blkdev/: ahci.c  ahci.h  ahci_regs.h  blkdev.c  blkdev.h  blkpart.c  blkpart.h  gpt.c  gpt.h  sata.h
src/disk/: ahci.c  ahci.h  ahci_regs.h  blkdev.c  blkdev.h  disk.c  disk.h  sata.h
src/fs/: devfs.c  devfs.h  ramfs.c  ramfs.h
src/kshell/: cmd.c  cmd.h  kbdlog.c  kbdlog.h  ksharg.c  ksharg.h  kshell.c  kshell.h  kshinput.c  kshinput.h  kshscan.c  kshscan.h  vasview.c  vasview.h
src/kshell/cmd/: ksh_clear.c  ksh_clear.h  ksh_devmgr.c  ksh_help.c  ksh_mbi.c  ksh_mbi.h  ksh_taskmgr.c  ksh_taskmgr.h  ksh_vasview.c  ksh_vasview.h
src/kshell/kshcmd/: ksh_clear.c  ksh_devmgr.c  ksh_devmgr.h  ksh_help.c  ksh_help.h  ksh_lua.c  ksh_lua.h  ksh_mbi.c  ksh_taskmgr.c  ksh_vasview.c  ksh_vfs.c  ksh_vfs.h  kshcmd.c  kshcmd.h
src/test/: ktest.c  ktest.h  ktest_smp.c  ktest_smp.h  ktests.c  ktests.h  vmctl.c  vmctl.h  vmctl_arch.h
src/test/early/: suite_dummy.c
src/test/earlyboot/: earlyboot_tests.h  testsuite_dummy.c
src/test/smp/: smp_suite_mutex.c  smp_suite_vnode.c  smpsuite_vnode.c
src/vfs/: dir_tree.c  dir_tree.h  file.c  file.h  fs_desc.h  vfs.c  vfs.h  vfs_defs.h  vfs_err.c  vfs_err.h  vfs_fs.h  vfs_node.h  vfs_path.c  vfs_path.h  vnode.c  vnode.h  vpath.c  vpath.h
tests/: .clangd  CMakeLists.txt  dynarr_test.cc  ksharg_test.cc  kshscan_test.cc  list_test.cc  vfspath_test.cc
tests/fakes/: assert.h  heap.c  heap.h  kprintf.c  kprintf.h  kstring.c  kstring.h  memfun.c  memfun.h
tools/: create_ahci_test_disk.sh  create_iso.sh  find-gcc-system-includes.sh  find_gcc_system_includes.sh  ktest.sh  loop-hd-image.sh  loop_hd.sh  resolvestack.py  run_qemu.sh  tapview.sh
tools/bash/: dirs.sh  log.sh  prelude.sh
user/: CMakeLists.txt  entry.s  link.ld  main.c
